--- a/pages/contacto.htm
+++ b/pages/contacto.htm
@@ -37,15 +37,15 @@
 <div id="contentarea">
 <div id="leftbar">
 <h2>Contacto</h2>
-<p>Puede ponerse en contacto con nosotros a traves de e-mail, por
-tel&eacute;fono o bien enviarnos su consulta a traves del sencillo formulario
-que viene a continuaci&oacute;n: </p>
+<p>Puede ponerse en contacto con nosotros a traves de e-mail o por
+tel&eacute;fono: </p>
 <br />
 <ul>
   <li>Correo electr&oacute;nico: <a href="mailto:info@ecotepes.com">info@ecotepes.com</a></li>
   <li>Tel&eacute;fono de contacto: <b>649 402 339</b></li>
 </ul>
 <br />
+  <!--
 <div id="form">
 <form name="formulario" method="post" action="/chs-bin/formmail.php"><input name="recipient" value="info@ecotepes.com;arturolorenzogar@yahoo.es;rosaalbores@hotmail.com" type="hidden" /> <input name="ok_url" value="http://www.ecotepes.com/pages/formulario_ok.htm" type="hidden" />
   <p><span class="tituloform">Nombre</span>
@@ -70,6 +70,7 @@ usted
 por este medio</p>
 </form>
 </div>
+-->
 </div>
 
 
